RESOLVED FIXED56187
JavaMethod does not correctly check for a null jstring for the method name
https://bugs.webkit.org/show_bug.cgi?id=56187
Summary JavaMethod does not correctly check for a null jstring for the method name
Steve Block
Reported 2011-03-11 06:42:05 PST
JavaMethod does not correctly check for a null jstring for the method name
Attachments
Patch (1.41 KB, patch)
2011-03-11 06:46 PST, Steve Block
no flags
Steve Block
Comment 1 2011-03-11 06:43:25 PST
Steve Block
Comment 2 2011-03-11 06:46:56 PST
Andrei Popescu
Comment 3 2011-03-11 07:08:00 PST
OOPS! :) LGTM
Jeremy Orlow
Comment 4 2011-03-11 09:18:56 PST
Comment on attachment 85470 [details] Patch r=me
WebKit Commit Bot
Comment 5 2011-03-11 14:53:47 PST
Comment on attachment 85470 [details] Patch Clearing flags on attachment: 85470 Committed r80888: <http://trac.webkit.org/changeset/80888>
WebKit Commit Bot
Comment 6 2011-03-11 14:53:51 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.