2011-03-11  Steve Block  <steveblock@google.com>

Reviewed by Jeremy Orlow.

        JavaMethod does not correctly check for a null jstring for the method name
        https://bugs.webkit.org/show_bug.cgi?id=56187

        No new tests, simple typo fix.

        * bridge/jni/JavaMethod.cpp:
        (JavaMethod::JavaMethod):

Canonical link: https://commits.webkit.org/70773@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@80888 268f45cc-cd09-0410-ab3c-d52691b4dbfc